@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.4317 2019/10/12 08:59:00 wiz Exp $
+$NetBSD: CHANGES-2019,v 1.4318 2019/10/12 09:13:22 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -6941,3 +6941,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated print/gutenprint-lib to 5.3.3 [gdt 2019-10-11]
 	Removed textproc/py-tinycss successor textproc/py-tinycss2 [wiz 2019-10-12]
 	Updated print/tex-biblatex-ieee-doc to 1.3anb1 [wiz 2019-10-12]
+	Removed textproc/dbtoepub successor textproc/docbook-xsl [wiz 2019-10-12]
